--- a/src/components/DefaultSection/ImageWrapper/ImageWrapper.scss
+++ b/src/components/DefaultSection/ImageWrapper/ImageWrapper.scss
@@ -6,4 +6,5 @@
 
 .DefaultSection--Image {
   width: 100%;
+  display: block;
 }
